<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/judulMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:text="@string/judul1"
        android:textColor="#f2fcfe"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/judul2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/judulMain"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/judul2"
        android:textColor="#f2fcfe" />

    <Button
        android:id="@+id/button1"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/judul2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="65dp"
        android:text="@string/konversi"
        android:textColor="@color/black"
        app:backgroundTint="#48C5FD" />

    <Button
        android:id="@+id/button2"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:onClick="profile"
        android:text="@string/profile"
        android:textColor="#000000"
        app:backgroundTint="#D4E157" />

    <Button
        android:id="@+id/buttonKembali"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:onClick="kembali"
        android:text="@string/exit"
        android:textColor="#FFFFFF"
        app:backgroundTint="#FF2C2C" />

</RelativeLayout>